iFit - Modificaciones Esther-Vaquero

--- a/iFit/normativa.html
+++ b/iFit/normativa.html
@@ -25,10 +25,11 @@
                         </ul>
                         <ul class="nav hidden-xs" id="lg-menu">
                             <li class="active"><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i> Inicio</a></li>
-                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i> Temático</a></li>
                             <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i> Prevalentes</a></li>
-                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas</a></li>
+                            <li><a href="consultas.html"><i class="glyphicon glyphicon-book"></i> Consultas</a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas TIC</a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i> Enlaces</a></li>
                             <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i> Autores</a></li>
                             <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i> Acerca de</a></li>
@@ -43,16 +44,15 @@
                         </ul>
                         <!-- tiny only nav-->
                         <ul class="nav visible-xs" id="xs-menu">
-                            <li><a href="index.html" class="text-center"><i class="glyphicon glyphicon-info-sign"></i></a></li>
-                            <li><a href="normativa.html" class="text-center"><i class="glyphicon glyphicon-file"></i></a></li>
-                            <li><a href="tematico.html" class="text-center"><i class="glyphicon glyphicon-th"></i></a></li>
-                            <li><a href="prevalentes.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
-                            <li><a href="preguntas.html" class="text-center"><i class="glyphicon glyphicon-question-sign"></i></a></li>
-                            <li><a href="enlaces.html" class="text-center"><i class="glyphicon glyphicon-globe"></i></a></li>
-                            <li><a href="autores.html" class="text-center"><i class="glyphicon glyphicon-user"></i></a></li>
-                            <li><a href="about.html" class="text-center"><i class="glyphicon glyphicon-edit"></i></a></li>
-
-
+                            <li><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i></a></li>
+                            <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i></a></li>
+                            <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i></a></li>
+                            <li><a href="consultas.html"><i class="glyphicon glyphicon-book"></i></a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i></a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i></a></li>
+                            <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i></a></li>
+                            <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                            <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i></a></li>
                         </ul>
                     </div>
                     <!-- /sidebar -->
@@ -79,18 +79,17 @@
                                     <div class="bs-callout bs-callout-info" id="callout-alerts-no-default"> 
                                         <h3>Normativa de Referencia.</h3><hr> 
 
-                                        <div class="alert alert-info">Orden de 13 de octubre de 1967, por la que se establecen normas para la aplicación y desarrollo de las prestaciones por incapacidad laboral transitoria en el Régimen General de la Seguridad Social.</div>
+                                        <div class="alert alert-info">Real Decreto 625/2014, de 18 de julio, por el que se regulan determinados aspectos de la gestión y control de los procesos por incapacidad temporal en los primeros trescientos sesenta y cinco días de su duración.</div>
 
-                                        <div class="alert alert-info">Orden 21 de marzo de 1974, por la que se regulan determinadas funciones del Inspección de Servicios Sanitarios de la Seguridad Social en materia de altas médicas</div>
+                                        <div class="alert alert-info">Ley 35/2014, de 26 de diciembre, por la que se modifica el texto refundido de la Ley General de la Seguridad Social en relación con el régimen jurídico de las Mutuas de Accidentes de Trabajo y Enfermedades Profesionales de la Seguridad Social.</div>
 
-                                        <div class="alert alert-info">Orden de 5 de abril de 1974, por la que se actualiza el baremo de lesiones, mutilaciones y deformaciones de carácter definitivo y no invalidante, previsto en el artículo 146 de la Ley de la Seguridad Social.</div>
+                                        <div class="alert alert-info">Orden ESS/1187/2015, de 15 de junio, por la que se desarrolla el Real Decreto 625/2014, de 18 de julio, por el que se regulan determinados aspectos de la gestión y control de los procesos por incapacidad temporal en los primeros trescientos sesenta y cinco días de su duración.</div>
 
-                                        <div class="alert alert-info">Real Decreto Legislativo 1/1994, 20 de junio. Texto Refundido de la Ley General de la Seguridad Social.</div>
+                                        <div class="alert alert-info">Real Decreto Legislativo 5/2015, de 30 de octubre, del Estatuto Básico del Empleado Público.</div>
 
-                                        <div class="alert alert-info">Ley 42/1994, de 30 de diciembre, de Medidas fiscales, administrativas y de orden social.</div>
-                                        
-                                        <div class="alert alert-info">Real Decreto 1993/1995, de 7 de diciembre, por el que se aprueba el Reglamento sobre colaboración de las Mutuas de Accidentes de Trabajo y Enfermedades Profesionales de la Seguridad Social.</div>
+                                        <div class="alert alert-info">Real Decreto Legislativo 8/2015, de 30 de octubre, por el que se aprueba el texto refundido de la Ley General de la Seguridad Social.</div>
 
+                                        <div class="alert alert-info">Real Decreto 1150/2015, de 18 de diciembre, por el que se modifica el Real Decreto 1299/2006, de 10 de noviembre, por el que se aprueba el cuadro de enfermedades profesionales en el sistema de la Seguridad Social y se establecen criterios para su notificación y registro.</div>
                                         
                                         <div class="alert alert-info">...</div>
 
