--- a/iFit/about.html
+++ b/iFit/about.html
@@ -31,10 +31,11 @@
                         </ul>
                         <ul class="nav hidden-xs" id="lg-menu">
                             <li class="active"><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i> Inicio</a></li>
-                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i> Temático</a></li>
                             <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i> Prevalentes</a></li>
-                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas</a></li>
+                            <li><a href="consultas.html"><i class="glyphicon glyphicon-book"></i> Consultas</a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas TIC</a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i> Enlaces</a></li>
                             <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i> Autores</a></li>
                             <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i> Acerca de</a></li>
@@ -49,16 +50,15 @@
                         </ul>
                         <!-- tiny only nav-->
                         <ul class="nav visible-xs" id="xs-menu">
-                            <li><a href="index.html" class="text-center"><i class="glyphicon glyphicon-info-sign"></i></a></li>
-                            <li><a href="normativa.html" class="text-center"><i class="glyphicon glyphicon-file"></i></a></li>
-                            <li><a href="tematico.html" class="text-center"><i class="glyphicon glyphicon-th"></i></a></li>
-                            <li><a href="prevalentes.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
-                            <li><a href="preguntas.html" class="text-center"><i class="glyphicon glyphicon-question-sign"></i></a></li>
-                            <li><a href="enlaces.html" class="text-center"><i class="glyphicon glyphicon-globe"></i></a></li>
-                            <li><a href="autores.html" class="text-center"><i class="glyphicon glyphicon-user"></i></a></li>
-                            <li><a href="about.html" class="text-center"><i class="glyphicon glyphicon-edit"></i></a></li>
-
-
+                            <li><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i></a></li>
+                            <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i></a></li>
+                            <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i></a></li>
+                            <li><a href="consultas.html"><i class="glyphicon glyphicon-book"></i></a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i></a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i></a></li>
+                            <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i></a></li>
+                            <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                            <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i></a></li>
                         </ul>
                     </div>
                     <!-- /sidebar -->
