--- a/iFit/autores.html
+++ b/iFit/autores.html
@@ -25,10 +25,11 @@
                         </ul>
                         <ul class="nav hidden-xs" id="lg-menu">
                             <li class="active"><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i> Inicio</a></li>
-                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i> Temático</a></li>
                             <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i> Prevalentes</a></li>
-                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas</a></li>
+                            <li><a href="consultas.html"><i class="glyphicon glyphicon-book"></i> Consultas</a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas TIC</a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i> Enlaces</a></li>
                             <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i> Autores</a></li>
                             <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i> Acerca de</a></li>
@@ -43,16 +44,15 @@
                         </ul>
                         <!-- tiny only nav-->
                         <ul class="nav visible-xs" id="xs-menu">
-                            <li><a href="index.html" class="text-center"><i class="glyphicon glyphicon-info-sign"></i></a></li>
-                            <li><a href="normativa.html" class="text-center"><i class="glyphicon glyphicon-file"></i></a></li>
-                            <li><a href="tematico.html" class="text-center"><i class="glyphicon glyphicon-th"></i></a></li>
-                            <li><a href="prevalentes.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
-                            <li><a href="preguntas.html" class="text-center"><i class="glyphicon glyphicon-question-sign"></i></a></li>
-                            <li><a href="enlaces.html" class="text-center"><i class="glyphicon glyphicon-globe"></i></a></li>
-                            <li><a href="autores.html" class="text-center"><i class="glyphicon glyphicon-user"></i></a></li>
-                            <li><a href="about.html" class="text-center"><i class="glyphicon glyphicon-edit"></i></a></li>
-
-
+                            <li><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i></a></li>
+                            <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i></a></li>
+                            <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i></a></li>
+                            <li><a href="consultas.html"><i class="glyphicon glyphicon-book"></i></a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i></a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i></a></li>
+                            <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i></a></li>
+                            <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                            <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i></a></li>
                         </ul>
                     </div>
                     <!-- /sidebar -->
@@ -80,8 +80,11 @@
 
                                         <h3>Autores.</h3><hr>
 
-                                        <div class="alert alert-info"><strong>Esther Álvarez Theurer.</strong> <i>Instituto Nacional de la Seguridad Social. Córdoba. España.</i><a href="http://orcid.org/0000-0000-0000-0000" target="_blank"> ORCID: 0000-0000-0000-0000</a></div>
-                                        <div class="alert alert-info"><strong>Manuel Vaquero-Abellán.</strong> <i>Dirección General de Prevención y Protección Ambiental. Universidad de Córdoba, Córdoba, España.</i><a href="http://orcid.org/0000-0002-0602-317X" target="_blank"> ORCID: 0000-0002-0602-317X</a></div> 
+                                        <div class="alert alert-info"><strong>Esther Álvarez Theurer.</strong> <i>Instituto Nacional de la Seguridad Social. Córdoba. España.</i><a href="http://orcid.org/0000-0002-0067-5548" target="_blank"> ORCID: 0000-0002-0067-5548</a></div>
+                                        <div class="alert alert-info"><strong>Manuel Vaquero Álvarez.</strong> <i>Unidad Gestión Clínica Linares. Centro Salud San José. Jaén.  España.</i><a href="http://orcid.org/0000-0001-9730-6310" target="_blank"> ORCID: 0000-0001-9730-6310</a></div> 
+                                        <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Analista Programador en el Área de Nuevas Tecnologías. Soporte a la Docencia y a la Investigación - Sistemas, Universidad de Cordoba, Córdoba, España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> en <a href="https://github.com/jcheca" target="_blank"><img src="images/git.png"></a> </i><a href="http://twitter.com/abbasben" target="_black"><img src="images/twitter.png"></a>
+                                        <a href="https://www.facebook.com/abbascomputing/" target="_blank"><img src="images/facebook.png"></a>
+                                        <a href="http://es.linkedin.com/in/jcheca" target="_blank"><img src="images/linkedin.png"></a></div>
 
                                         <hr><a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Volver al inicio
 
