iFit - Modificaciones Esther-Vaquero

--- a/iFit/autores.html
+++ b/iFit/autores.html
@@ -82,9 +82,8 @@
 
                                         <div class="alert alert-info"><strong>Esther Álvarez Theurer.</strong> <i>Instituto Nacional de la Seguridad Social. Córdoba. España.</i><a href="http://orcid.org/0000-0002-0067-5548" target="_blank"> ORCID: 0000-0002-0067-5548</a></div>
                                         <div class="alert alert-info"><strong>Manuel Vaquero Álvarez.</strong> <i>Unidad Gestión Clínica Linares. Centro Salud San José. Jaén.  España.</i><a href="http://orcid.org/0000-0001-9730-6310" target="_blank"> ORCID: 0000-0001-9730-6310</a></div> 
-                                        <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Analista Programador en el Área de Nuevas Tecnologías. Soporte a la Docencia y a la Investigación - Sistemas, Universidad de Cordoba, Córdoba, España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> en <a href="https://github.com/jcheca" target="_blank"><img src="images/git.png"></a> </i><a href="http://twitter.com/abbasben" target="_black"><img src="images/twitter.png"></a>
-                                        <a href="https://www.facebook.com/abbascomputing/" target="_blank"><img src="images/facebook.png"></a>
-                                        <a href="http://es.linkedin.com/in/jcheca" target="_blank"><img src="images/linkedin.png"></a></div>
+                                        <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Miembro Comisión IT. Universidad de Cordoba. Córdoba. España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a></div>
+                                        
 
                                         <hr><a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Volver al inicio
 
