--- a/iFit/autores.html
+++ b/iFit/autores.html
@@ -80,9 +80,9 @@
 
                                         <h3>Autores.</h3><hr>
 
-                                        <div class="alert alert-info"><strong>Esther Álvarez Theurer.</strong> <i>Instituto Nacional de la Seguridad Social. Córdoba. España.</i><a href="http://orcid.org/0000-0002-0067-5548" target="_blank"> ORCID: 0000-0002-0067-5548</a></div>
+                                        <div class="alert alert-info"><strong>Esther Álvarez Theurer.</strong> <i>Coordinadora Provincial de la Unidad Médica de Valoración de Incapacidades. Inspección Médica. Delegación T.Córdoba. Consejería de Salud. España.</i><a href="http://orcid.org/0000-0002-0067-5548" target="_blank"> ORCID: 0000-0002-0067-5548</a></div>
                                         <div class="alert alert-info"><strong>Manuel Vaquero Álvarez.</strong> <i>Unidad Gestión Clínica Linares. Centro Salud San José. Jaén.  España.</i><a href="http://orcid.org/0000-0001-9730-6310" target="_blank"> ORCID: 0000-0001-9730-6310</a></div> 
-                                        <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Miembro Comisión IT. Universidad de Cordoba. Córdoba. España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a></div>
+                                        <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Comisión IT. Universidad de Cordoba. Córdoba. España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a></div>
                                         
 
                                         <hr><a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Volver al inicio
