--- a/iFit/consultas.html
+++ b/iFit/consultas.html
@@ -80,6 +80,98 @@
 
                                         <h3>Consultas.</h3><hr>
 
+                                        <div class="alert alert-info">¿ Cuándo se extingue la prestación de IT ?</div>
+                                        Porque el trabajador se encuentre en alguna de las siguientes situaciones que provocan una extinción de la IT:<p><p> 
+                                        <ul>
+                                            <li>Por curación o mejoría, lo que le permite realizar su trabajo habitual. 
+                                            <li>Es dado de alta médica con o sin informe de propuesta incapacidad permanente (IP). 
+                                            <li>Alta por incomparecencia a la revisión del médico del SPS. 
+                                            <li>Por superar el plazo máximo establecido para la situación de IT. 
+                                            <li>Concesión de una pensión de jubilación. 
+                                            <li>Incomparecencia a un reconocimiento médico requerido por la entidad gestora o colaboradora, sin justificar su ausencia. 
+                                            <li>Fallecimiento del trabajador.
+                                        </ul>
+    
+                                        <div class="alert alert-info">¿ Qué se considera recaída de un proceso anterior ?</div>
+                                        Se considera recaída si el trabajador, tras recibir el alta por curación o mejoría y reincorporarse a la empresa, es dado de baja nuevamente por la misma patología u otra similar a la que tenía, debida a la misma causa que motivó su baja anterior, todo ello dentro de los siguientes seis meses.<p><p> 
+
+                                        En cambio, se considerarán nuevos procesos aunque la afección sea la misma cuando:<p>
+                                        <ul>
+                                            <li>La etiología que lo ha producido ha sido diferente.
+                                            <li>La patología se produce después de los 180 días de haber sido dado de alta.
+                                        </ul>
+
+                                        Para el cómputo de la duración máxima de la IT, serán acumulables todas las recaídas, es decir, todos los períodos de baja laboral con el mismo o similar diagnóstico que comiencen antes de haber transcurrido 180 días desde el alta del proceso anterior.<p><p>
+
+                                        Cuando el paciente ha sido dado de alta tras ser valorado por el INSS, una nueva baja por el mismo proceso o similar en los siguientes 180 días es una recaída, y sólo puede ser emitida por la entidad gestora.
+
+                                        <div class="alert alert-info">¿ Se puede dar el alta y la baja en el mismo día ?</div>
+                                        <b>Sí se puede</b>. Se pueden dar dos situaciones:<p><p>
+
+                                        <ul>
+                                            <li>Baja y alta emitidos el mismo día y con la misma fecha: el trabajador es reconocido por un facultativo que emite la baja y, horas más tarde, cuando vuelve a ser reconocido, se objetiva una rápida mejoría o curación que le permite reincorporarse al trabajo. O bien el reposo de un día es suficiente, según el criterio de su médico, para recuperar la capacidad laboral.
+                                            <li>Baja y alta emitidos el mismo día pero con fechas diferentes: si el trabajador documenta la ausencia al trabajo por motivos médicos en días previos (p. ej., un ingreso) y ya puede incorporarse al trabajo, podemos dar el mismo día la baja con fecha retrospectiva y el alta de la fecha del reconocimiento.
+                                        </ul>
+
+                                        <div class="alert alert-info">¿ Cuándo debe incorporarse al trabajo un paciente al que se le da el alta si hace el turno de noche ?</div>
+
+                                        Según la normativa, la incorporación del trabajador a la empresa debe tener lugar al día siguiente de la fecha del alta.<p><p> 
+
+                                        La opinión general de cuándo debe incorporarse un trabajador de turno de noche tras el alta sería el día siguiente a la fecha del parte de alta y desde el inicio de su horario habitual.
+
+                                        <div class="alert alert-info">¿ Se puede hacer un examen estando de baja ?</div>
+                                        <b>Sí</b>.<p><p> 
+                                        No existe una prohibición específica para realizar un examen o acudir a clase estando de baja, no se vulneran las condiciones legales de IT. Sólo se puede prohibir su asistencia si ello resulta pernicioso para la situación clínica del paciente o si las actividades que el examen comporta son de similares características y duración que las del trabajo que ha dado lugar a la situación de IT.
+
+                                        <div class="alert alert-info">¿ Qué es el accidente <i>in itinere</i> ?</div>
+                                        Es el accidente ocurrido al ir o al volver del trabajo, el que sucede entre el domicilio habitual del trabajador y el puesto de trabajo. No se considerará accidente de trabajo si se producen interrupciones en el camino para realizar actos ajenos al trabajo o el trabajador se dirige desde el trabajo a lugares distintos del domicilio habitual.<p><p> 
+
+                                        La jurisprudencia ha venido conformando lo que se entiende por accidente <i>in itinere</i>, con ciertas discrepancias interpretativas. En general, se requiere el cumplimiento de cuatro requisitos:<p>
+
+                                        <ul> 
+                                            <li>Teleológico (el fin del desplazamiento sea ir o volver al trabajo).
+                                            <li>Mecánico (el medio de transporte sea el adecuado). 
+                                            <li>Cronológico (el tiempo empleado sea el normal para el desplazamiento de acuerdo con la distancia que se va a recorrer y el medio de transporte utilizado).
+                                            <li>Topográfico (el camino utilizado sea el habitual para el recorrido).
+                                        </ul>
+
+
+                                        <div class="alert alert-info">¿ Hay <i>«enfermedades»</i> que pueden ser consideradas como <i>«accidentes»</i> de trabajo ?</div>
+                                        <b>Sí</b>.<p><p> 
+
+                                        Algunas enfermedades también tienen consideración de accidente de trabajo:<p><p>
+
+                                        <ul>
+                                            <li>Las que contraiga el trabajador con motivo de la realización de su trabajo y que no están incluidas en el cuadro de enfermedades profesionales vigente (RD 1299/2006). Ha de demostrarse que la enfermedad tuvo por causa exclusiva la ejecución de una actividad propia del trabajo.
+                                            <li>Las padecidas con anterioridad por el trabajador que se agraven como consecuencia de la lesión constitutiva del accidente. 
+                                            <li>Las complicaciones y enfermedades intercurrentes que modifiquen la evolución de un accidente de trabajo, así como las nuevas afecciones adquiridas en el nuevo medio en el que se haya situado el paciente para su curación.
+                                        </ul>
+
+
+                                        <div class="alert alert-info">¿ Qué es el período de observación de una enfermedad profesional ?</div>
+                                        Se considera período de observación el tiempo que es necesario para el estudio médico y la determinación del agente causante de la enfermedad profesional, cuando hay necesidad de aplazar su declaración, a fin de poder asegurar el diagnóstico de la misma.<p><p> 
+
+                                        Durante este período pueden darse dos supuestos:<p>
+
+                                        <ul>
+                                            <li>El trabajador puede continuar realizando su trabajo.
+                                            <li>El trabajador se encuentra en situación de IT en observación por enfermedad profesional hasta que se determina la etiología.
+                                        </ul>
+
+                                        El período de observación tiene una duración máxima de seis meses. El INSS puede prorrogar este período otros seis meses cuando se estime necesario para el estudio y determinación del diagnóstico. Al finalizar este tiempo, el trabajador pasará a la situación que proceda de acuerdo con su estado: curación, IT por enfermedad profesional o calificación de algún grado de Incapacidad Permanente.<p>
+
+                                        <div class="alert alert-info">¿ Quién puede solicitar la Incapacidad Permanente ?</div>
+
+                                        La solicitud de IP puede instarla el médico de familia ante la inspección médica, que la tramitará al INSS.<p><p> 
+
+                                        También puede solicitarla el propio trabajador ante el INSS, incluso aunque no haya estado ni un solo día de baja por IT, para lo que deberá aportar la información clínica pertinente.<p> 
+
+                                        Asimismo, puede iniciar el procedimiento de oficio la entidad gestora (INSS, ISM) o la entidad colaboradora (Mutuas Colaboradoras de la Seguridad Social).<p>
+
+
+
+                                        <div class="alert alert-info"> ... </div>
+
 
 
                                         <hr><a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Volver al inicio
