--- a/iFit/about.html
+++ b/iFit/about.html
@@ -76,7 +76,7 @@
           				      <span class="icon-bar"></span>
           				      <span class="icon-bar"></span>
                       </button>
-                      <a href="index.html" class="navbar-brand logo">iFit - Formación & Consulta</a>
+                      <a href="index.html" class="navbar-brand logo">&nbsp;iFit - Formación & Consulta en IT&nbsp;</a>
                   	</div>
                 </div>
 
@@ -96,7 +96,7 @@
 
                           <h5>Acerca de iFit v.1 - <i>Oct.2016</i></h5>
                           
-                          <p><img src="images/ifit.png" width="100px" class = "img-thumbnail"></p>
+                          <p><img src="images/ifit.png" width="85px" </p>
 
                           <div class="alert alert-info">Desarrollado por <strong>José Checa-Claudel.</strong> <i>Analista Programador en el Área de Nuevas Tecnologías. Soporte a la Docencia y a la Investigación - Sistemas, Universidad de Cordoba, Córdoba, España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> en <a href="https://github.com/jcheca" target="_blank"><img src="images/git.png"></a> </i><a href="http://twitter.com/abbasben" target="_black"><img src="images/twitter.png"></a>
                           <a href="https://www.facebook.com/abbascomputing/" target="_blank"><img src="images/facebook.png"></a>
