--- a/iFit/index.html
+++ b/iFit/index.html
@@ -67,7 +67,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a href="index.html" class="navbar-brand logo"> iFit - Formación & Consulta </a>
+                                <a href="index.html" class="navbar-brand logo">&nbsp;iFit - Formación & Consulta en IT&nbsp;</a>
                             </div>
                         </div>
                         <!-- /top nav -->              
