--- a/iFit/prevalentes.html
+++ b/iFit/prevalentes.html
@@ -67,7 +67,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a href="index.html" class="navbar-brand logo">iFit - Formación & Consulta</a>
+                                <a href="index.html" class="navbar-brand logo">&nbsp;iFit - Formación & Consulta en IT&nbsp;</a>
                             </div>
                         </div>
                         <!-- /top nav -->              
@@ -81,9 +81,9 @@
                                         <h3>Patologías Prevalentes.</h3><hr>
 
                                         <div class="alert alert-info">Cervicalgias.</div>
-                                        <div class="alert alert-info"><a href="lumbalgias.html">* Lumbalgias.</a> (Tiene enlace de ejemplo)</div>
-                                        <div class="alert alert-info"><a href="ansiedad.html">* Ansiedad.</a> (Tiene enlace de ejemplo)</div>
-                                        <div class="alert alert-info"><a href="depresion.html">* Depresión.</a> (Tiene enlace de ejemplo)</div>
+                                        <div class="alert alert-info"><a href="lumbalgias.html">* Lumbalgias.</a></div>
+                                        <div class="alert alert-info"><a href="ansiedad.html">* Ansiedad.</a></div>
+                                        <div class="alert alert-info"><a href="depresion.html">* Depresión.</a></div>
                                         <div class="alert alert-info">Osteoartrosis.</div>
                                         <div class="alert alert-info">Trastornos del disco intervertebral.</div>
                                         <div class="alert alert-info">Patología de hombro.</div>
