--- a/Preventapp/about.html
+++ b/Preventapp/about.html
@@ -76,7 +76,7 @@
           				      <span class="icon-bar"></span>
           				      <span class="icon-bar"></span>
                       </button>
-                      <a href="index.html" class="navbar-brand logo">&nbsp;PreventAPP - Formación & Consulta&nbsp;</a>
+                      <a href="index.html" class="navbar-brand logo">&nbsp;PreventAPP&nbsp;</a>
                   	</div>
                 </div>
 
