--- a/Preventapp/preguntas.html
+++ b/Preventapp/preguntas.html
@@ -27,7 +27,7 @@
                             <li class="active"><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i> Inicio</a></li>
                             <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i> Temático</a></li>
                             <li><a href="riesgos.html"><i class="glyphicon glyphicon-ok"></i> Riesgos</a></li>
-                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-book"></i> Prácticas</a></li>
+                            <li><a href="practicas.html"><i class="glyphicon glyphicon-book"></i> Prácticas</a></li>
                             <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas</a></li>
                             <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
                             <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i> Enlaces</a></li>
