--- a/Preventapp/practicas.html
+++ b/Preventapp/practicas.html
@@ -129,7 +129,7 @@
                                         <li><b>Calzas</b>: dependiendo del tipo de intervención se valorará la utilización de calzas altas e impermeables.
                                         </ul><p><p>
 
-                                        <center><img src="images/001.png"></center><p><p>
+                                        <center><img src="images/001.png" width="400px"></center><p><p>
 
                                         <div class="alert alert-info">Necesidad de vacunación</div>
 
