--- a/Preventapp/autores.html
+++ b/Preventapp/autores.html
@@ -37,7 +37,7 @@
                         <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                             <li>
                                 <h3>
-                                    <a href="" target="_blank"><img src="images/ifit-inss.png" width=170 alt="logo"></a> 
+                                    <a href="" target="_blank"><img src="images/ifit-inss.png" width=50 alt="logo"></a> 
                                     <hr>PreventAPP
                                 </h3> Formación y Consulta
                             </li>
@@ -88,7 +88,7 @@
 
                                         <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Comisión IT. Universidad de Cordoba. Córdoba. España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a></div>
                                         
-                                       <div class="alert alert-info"><strong>Pablo López-Roldán.</strong> <i>Servicio de Prevención Riesgos Laborales. Universidad de Córdoba. Córdoba. España. <a href="http://orcid.org/xxxx-xxxx-xxxx-xxxx" target="_blank">ORCID: xxxx-xxxx-xxxx-xxxx</a></div>
+                                       <div class="alert alert-info"><strong>Pablo López-Roldán.</strong> <i>Servicio de Prevención Riesgos Laborales. Universidad de Córdoba. Córdoba. España. <a href="http://orcid.org/0000-0002-6532-0131" target="_blank">ORCID: 0000-0002-6532-0131</a></div>
 
                                         <hr><a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Volver al inicio
 
