Añadido Indice Temático

--- a/Preventapp/riesgos.html
+++ b/Preventapp/riesgos.html
@@ -78,7 +78,7 @@
                                     <!-- main col left --> 
                                     <div class="bs-callout bs-callout-info" id="callout-alerts-no-default"> 
 
-                                        <h3>Clasificados en:</h3><hr>
+                                        <h3>Riesgos:</h3><hr>
 
                                         <div class="alert alert-info">Riesgos asociados a agentes mecánicos
 .</div>
